fix: use daemon threads for all spawned threads
Previously, the non-daemon threads would prevent shutdown, this fixes it.
Fixes #2099